--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin:0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     display: grid;
@@ -16,10 +17,7 @@ body{
     background-color: aquamarine;
     width:max-content;
     height:max-content;
-    /* width: 90%;
-    height: 90%; */
     border: solid black 2px;
-
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -34,4 +32,10 @@ body{
     width: 250px;
     height: 250px;
     border: solid black 2px;
+}
+
+#button {
+    font-size: 1.3rem;
+    font-weight: bold;
+    padding: 10px 15px;
 }
